--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -103,20 +103,22 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Model Name</label>
-														<input type="text" name="serial_no" id="" class="form-control" placeholder="" required>
+														<input type="text" name="" id="" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
 														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
+														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
 														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
 												</div>
-												<div class="row">
+												<div class="row" >
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Type</label><br/>
 														<div class="btn-group btnrounded" ng-init="device.device_type='slave'">
@@ -126,22 +128,34 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">&nbsp;</label>
-														<select class="form-control" ng-model="device.device_master_id" ng-options="item.device_id as item.device_name for item in deviceList">
-															<option>Select Primary Device</option>
+														<select class="form-control" ng-hide="device.device_type=='master'" ng-model="device.device_master_id" ng-options="item.device_id as item.device_name for item in deviceList">
+															<option value="">Select Primary Device</option>
 														</select>
 													</div>
 												</div>
+												
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Facility</label><br/>
-														<input type="text" class="form-control" value="{{FacilityName}}" disabled/>
+														<!-- <input type="text" class="form-control" value="{{FacilityName}}" disabled/> -->
+														<select class="form-control" ng-model="device.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList" required>
+															<option value="">Select</option>
+														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Technician</label><br/>
-														<select class="form-control" name="technician_id" ng-model="device.technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id" required>
+														<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="device.technician_id" required>
 															<option value="">Select</option>
 														</select>
 														<small class="pull-right"><a ng-click="cancel()" ui-sref="app.subadmin.support.technician">Add Technician</a></small>
+													</div>
+												</div>
+												
+												<div class="row">
+													<div class="col-md-12">
+														<label for="">Doors</label><br/><!--doorList-->
+														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList" required>
+														</select>
 													</div>
 												</div>
 											</div>
