--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -110,7 +110,7 @@
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
-														<label for="">Device Type</label><br/>
+														<label for="">Door Status</label><br/>
 														<div class="btn-group btnrounded" ng-init="door.status = 1">
 															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="1">Active</label>
 															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="0">Inactive</label>
