--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -102,6 +102,7 @@
 												<md-tabs md-dynamic-height md-border-bottom>		
 													<md-tab label="Group Name">
 													<md-content>
+														<span class="error">{{user_group_error}}</span>
 														<form name="group_form" role="form" ng-validate="validationOptions" ng-submit="saveUserGroup(userGroup, group_form)" id="group_form">
 														<div class="row mt-10">
 															<div class="form-group col-sm-12 col-md-12">
@@ -135,53 +136,8 @@
 																	</tr>
 																</thead>
 																<tbody>
-																	<tr>
-																		<td>Main Gate Front</td>
-																		<td>
-																			<span class="loader"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
-																			<select class="form-control">
-																				<option>Select Schedule Group</option>
-																				<option selected>No Access</option>
-																				<option>Full Access</option>
-																				<option>Office-Weekdays</option>
-																				<option>Office-Weekend</option>
-																				<option>Cleaning-Weekdays</option>
-																				<option>Cleaning-Weekend</option>
-																			</select>
-																		</td>
-																	</tr>
-																	<tr>
-																		<td>Entry Gate</td>
-																		<td>
-																			<span class="loader"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
-																			<select class="form-control">
-																				<option selected>No Access</option>
-																				<option>Full Access</option>
-																				<option>Select Schedule Group</option>
-																				<option>Office-Weekdays</option>
-																				<option>Office-Weekend</option>
-																				<option>Cleaning-Weekdays</option>
-																				<option>Cleaning-Weekend</option>
-																			</select>
-																		</td>
-																	</tr>
-																	<tr>
-																		<td>Main Gate Back</td>
-																		<td>
-																			<span class="loader"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
-																			<select class="form-control">
-																				<option selected>No Access</option>
-																				<option>Full Access</option>
-																				<option>Select Schedule Group</option>
-																				<option>Office-Weekdays</option>
-																				<option>Office-Weekend</option>
-																				<option>Cleaning-Weekdays</option>
-																				<option>Cleaning-Weekend</option>
-																			</select>
-																		</td>
-																	</tr>
-																	<tr>
-																		<td>Pool Gate</td>
+																	<tr ng-repeat="doorlist in listDoorGroup">
+																		<td>{{doorlist.door_name}}</td>
 																		<td>
 																			<span class="loader"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
 																			<select class="form-control">
@@ -394,6 +350,7 @@
 											</div>
 										</md-card>										
 									</md-content>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="getUserGroupList()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
