Added device facility drop down

--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -138,7 +138,7 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Facility</label><br/>
 														<!-- <input type="text" class="form-control" value="{{FacilityName}}" disabled/> -->
-														<select class="form-control" ng-model="device.facility_id" ng-init="device.facility_id = " ng-options="item.facility_id as item.facility_name for item in facilityList">
+														<select class="form-control" ng-model="device.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList">
 															<option value="">Select</option>
 														</select>
 													</div>
