--- a/views/header.html
+++ b/views/header.html
@@ -145,7 +145,7 @@
 		<li class="dropdown nav-profile" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
 				<img src="images/avatar.jpg" alt="" class="img-circle size-30x30">
-				<span>Jhon Rockwell <fa name="angle-down"></fa></span>
+				<span>{{current_user.userFirstName}} {{current_user.userLastName}}<fa name="angle-down"></fa></span>
 			</a>
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
 				<li><a ui-sref="app.admin.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
