--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -103,7 +103,10 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Model Name</label>
-														<input type="text" name="" id="" class="form-control" placeholder="">
+														<!-- <input type="text" name="" id="" class="form-control" placeholder=""> -->
+														<select name="device_model" ng-model="device.device_model" class="form-control" ng-options="model for model in deviceModel" required>
+															<option value="">Select</option>
+														</select>
 													</div>
 												</div>
 												<div class="row">
@@ -160,7 +163,7 @@
 												</div>
 											</div>
 											<div class="modal-footer">
-												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
 												<button ng-click="formSubmit(device,device_form)" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
