--- a/views/tmpl/admin/door/edit-door.html
+++ b/views/tmpl/admin/door/edit-door.html
@@ -132,7 +132,7 @@
 											<option selected>USA Corporate Services</option>
 											<option>Aerzen USA Corporation</option>
 										</select> -->
-										<select class="form-control" name="facility_name" ng-init="doorData.facility_id = facilityId" ng-options="field.facility_id as field.facility_name for field in facilityList track by field.facility_id" ng-model="doorData.facility_id" required>
+										<select class="form-control" name="facility_name" ng-options="field.facility_id as field.facility_name for field in facilityList track by field.facility_id" ng-model="doorData.facility_id" disabled required>
 											<option value="">Select</option>
 										</select>
 									</div>
