User group delete

--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -341,7 +341,7 @@
 													</script>
 													<a ng-click="open()" class="btn btn-success btn-border btn-rounded">Edit</a>
 												</div>												
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event, user.usergroup_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
