Added changes bug fixes

--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -152,8 +152,8 @@
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Time Zone</label>
-												<input type="text" class="form-control" ng-model="facility.facility_timezone">
-												<!-- <select class="form-control">
+												<!-- <input type="text" class="form-control" ng-model="facility.facility_timezone"> -->
+												<select class="form-control" ng-model="facility.facility_timezone">
 													<option selected>USA (Alaska )</option>
 													<option>USA (Samoa)</option>
 													<option>USA (Pacific)</option>
@@ -163,7 +163,7 @@
 													<option>USA (Atlantic)</option>
 													<option>USA (Central)</option>
 													<option>USA (Chamorro)</option>
-												</select> -->
+												</select>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Zip Code</label>
