--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -103,7 +103,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Model Name</label>
-														<input type="text" name="" id="" class="form-control" placeholder="" required>
+														<input type="text" name="" id="" ng-model="device.device_model" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
@@ -247,7 +247,7 @@
 								<div class="glview">
 									<md-content>			
 										<md-card ng-repeat="device in dependentDevice | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
-											<a ui-sref="app.admin.device.view-dependent-device"><img ng-src="images/device/3.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.device.view-dependent-device"><img ng-src="images/device/elika-76-bronze.png" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ device.device_name }}</h2>
 												<p>{{ device.device_model }}</p>
