--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -127,7 +127,7 @@
 												</div>
 												<div class="form-group">
 													<label for="">Status</label><br/>
-													<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+													<div class="btn-group btnrounded" >
 														<label class="btn btn-default" ng-model="facility.status" uib-btn-radio="1">Active</label>
 														<label class="btn btn-default" ng-model="facility.status" uib-btn-radio="0">Inactive</label>
 													</div>
@@ -221,7 +221,7 @@
 								<div class="glview">
 									<md-content>			
 										<md-card ng-repeat="facility in facilities | limitTo:totalDisplayed | filter:text | filter:title | filter:location | orderBy:myOrderBy">
-											<a ui-sref="app.admin.facility.facility-details"><img ng-src="{{imagePath}}/facility/{{ facility.imagename }}.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.facility.facility-details"><img ng-src="images/facility/1.jpg" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ facility.facility_name }}</h2>
 												<p>{{ facility.facility_location }}</p>
