Added pages for schedule and camera

--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -11,7 +11,7 @@
 						<div class="bg-transparent usersbg">
 							<div class="row">
 								<div class="col-md-12">
-									<h3 class="custom-font">{{page.member}}</h3>
+									<h3 class="custom-font">{{page.title}}</h3>
 									<p>{{page.subtitle}}</p>									
 								</div>
 							</div>
