--- a/views/tmpl/admin/schedule/schedule-groups.html
+++ b/views/tmpl/admin/schedule/schedule-groups.html
@@ -5,10 +5,10 @@
 	
 	<div class="pagecontent">
 		<div class="row">		
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
-						<div class="bg-transparent">
+						<div class="bg-transparent schedulebg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -18,58 +18,67 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">15</p>
-									<span class="text-lg">Primary Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
+				<div class="card">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">7</p>
-									<span class="text-lg">Dependent Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">95</p>
-									<span class="text-lg">Users</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">45</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -80,229 +89,15 @@
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
 						<h1 class="custom-font"><strong>{{page.title}}</strong></h1>
-						<ul class="controls">
-							<li class="addpopup">
-								<div ng-controller="ModalDemoCtrl">
-									<script type="text/ng-template" id="myModalContent.html">
-										<div class="modal-header"><h4 class="modal-title custom-font">Create Schedule Groups</h4></div>
-										<div class="modal-body">
-											<div class="account">
-												<div class="overflow">												
-													<div class="form-group">
-														<label for="">Timer Name</label>
-														<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-													</div>												
-												</div>
-												<div class="overflow">
-													<div class="col-md-6 first">
-														<div class="form-group" ng-controller="DatepickerDemoCtrl">
-															<label for="">Start Date <small>(mm/dd/yyyy)</small></label>
-															<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-														</div>
-													</div>
-													<div class="col-md-6 last">
-														<div class="form-group" ng-controller="DatepickerDemoCtrl">
-															<label for="">End Date <small>(mm/dd/yyyy)</small></label>
-															<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-														</div>
-													</div>
-												</div>
-												<div class="overflow">
-													<div class="col-md-6 first">
-														<div class="form-group">
-															<label for="">Start Time <small>(HH:MM)</small></label>
-															<span ng-controller="TimepickerDemoCtrl">
-																<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-															</span>
-														</div>
-													</div>
-													<div class="col-md-6 last">
-														<div class="form-group">
-															<label for="">End Time <small>(HH:MM)</small></label>
-															<span ng-controller="TimepickerDemoCtrl">
-																<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-															</span>
-														</div>
-													</div>
-												</div>
-												<div class="overflow">
-													<div class="form-group">
-														<label for="">Days</label><br/>
-														<div class="btn-group btnrounded" ng-controller="DaysCtrl">
-															<label class="btn btn-default" ng-model="checkModel.Mo" uib-btn-checkbox>Mon</label>
-															<label class="btn btn-default" ng-model="checkModel.Tu" uib-btn-checkbox>Tue</label>
-															<label class="btn btn-default" ng-model="checkModel.We" uib-btn-checkbox>Wed</label>
-															<label class="btn btn-default" ng-model="checkModel.Th" uib-btn-checkbox>Thr</label>
-															<label class="btn btn-default" ng-model="checkModel.Fr" uib-btn-checkbox>Fri</label>
-															<label class="btn btn-default" ng-model="checkModel.Sa" uib-btn-checkbox>Sat</label>
-															<label class="btn btn-default" ng-model="checkModel.Su" uib-btn-checkbox>Sun</label>
-														</div>
-													</div>
-												</div>
-												<div class="overflow" >
-													<div class="col-md-6 first">
-														<div class="form-group">
-															<label for="">Access</label><br/>
-															<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Allowed</label>
-																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Denied</label>
-															</div>
-														</div>
-													</div>
-													<div class="col-md-6 last">
-														<div class="form-group" ng-controller="DatepickerDemoCtrl">
-															<label for="">Status</label><br/>
-															<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="overflow">
-													<div class="form-group" ng-controller="DatepickerDemoCtrl">
-														<label for="">Expiration Date</label>
-														<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-													</div>
-												</div>
-											</div>
-										</div>
-										<!--div class="hometabs">
-											<md-content class="md-padding tabsdemoDynamicHeight">
-												<md-tabs md-dynamic-height md-border-bottom>												
-													<md-tab label="Configuration">
-														<md-content>								
-															<div class="account">
-																<div class="overflow">
-																	<div class="form-group">
-																		<label for="">Timer Name</label>
-																		<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-																	</div>
-																</div>
-																<div class="overflow">
-																	<div class="col-md-6 first">
-																		<div class="form-group">
-																			<label for="">Start Time <small>(HH:MM)</small></label>
-																			<span ng-controller="TimepickerDemoCtrl">
-																				<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-																			</span>
-																		</div>
-																	</div>
-																	<div class="col-md-6 last">
-																		<div class="form-group">
-																			<label for="">End Time <small>(HH:MM)</small></label>
-																			<span ng-controller="TimepickerDemoCtrl">
-																				<uib-timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-																			</span>
-																		</div>
-																	</div>
-																</div>
-																<div class="overflow">
-																	<div class="form-group">
-																		<label for="">Days</label><br/>
-																		<div class="btn-group btnrounded" ng-controller="DaysCtrl">
-																			<label class="btn btn-default" ng-model="checkModel.Mo" uib-btn-checkbox>Mon</label>
-																			<label class="btn btn-default" ng-model="checkModel.Tu" uib-btn-checkbox>Tue</label>
-																			<label class="btn btn-default" ng-model="checkModel.We" uib-btn-checkbox>Wed</label>
-																			<label class="btn btn-default" ng-model="checkModel.Th" uib-btn-checkbox>Thr</label>
-																			<label class="btn btn-default" ng-model="checkModel.Fr" uib-btn-checkbox>Fri</label>
-																			<label class="btn btn-default" ng-model="checkModel.Sa" uib-btn-checkbox>Sat</label>
-																			<label class="btn btn-default" ng-model="checkModel.Su" uib-btn-checkbox>Sun</label>
-																		</div>
-																	</div>
-																</div>
-																<div class="overflow">
-																	<div class="form-group" ng-controller="DatepickerDemoCtrl">
-																		<label for="">Expiration Date</label>
-																		<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
-																	</div>
-																</div>
-																<div class="overflow" >
-																	<div class="col-md-6 first">
-																		<div class="form-group">
-																			<label for="">Access</label><br/>
-																			<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Allowed</label>
-																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Denied</label>
-																			</div>
-																		</div>
-																	</div>
-																	<div class="col-md-6 last">
-																		<div class="form-group" ng-controller="DatepickerDemoCtrl">
-																			<label for="">Status</label><br/>
-																			<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																				<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
-																			</div>
-																		</div>
-																	</div>
-																</div>				
-															</div>							   
-														</md-content>
-													</md-tab>
-							
-													<md-tab label="Schedule Groups">
-														<md-content>														
-															<div class="usergroup">
-																<section class="tile" fullscreen="isFullscreen02">
-																	<div class="tile-header">
-																		<h3 class="custom-font"><strong>Assigned Schedule Groups</strong></h3>
-																		<ul class="controls">
-																			<li class="addpopup">
-																				<a class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Groups</span></a>
-																			</li>
-																		</ul>
-																	</div>
-																	<div class="tile-body p-0">
-																		<table class="table table-bordered">
-																			<thead>
-																				<tr>
-																					<th>Schedule Name</th>
-																					<th>Facility</th>
-																					<th>Action</th>
-																				</tr>
-																			</thead>
-																			<tbody>
-																				<tr>
-																					<td>Office Schedule</td>
-																					<td>USA Corporate Services</td>
-																					<td><button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button></td>
-																				</tr>
-																				<tr>
-																					<td>Cleaning Schedule</td>
-																					<td>Finance Corporate of USA</td>
-																					<td><button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button></td>
-																				</tr>
-																				<tr>
-																					<td>Meeting Schedule</td>
-																					<td>Corporate Services USA</td>
-																					<td><button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button></td>
-																				</tr>
-																			</tbody>
-																		</table>
-																	</div>
-																</section>																
-															</div>														
-														</md-content>
-													</md-tab>							
-												</md-tabs>
-											</md-content>											
-										</div-->
-										<div class="modal-footer">
-											<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
-											<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
-										</div>
-									</script>
-									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Schedule</span></a>
-								</div>
-							</li>
-						</ul>
+						<div class="addusers">
+							<a class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add" ui-sref="app.admin.schedule.add-schedule"><i class="fa fa-plus"></i> <span>Add Schedule</span></a>
+						</div>
 					</div>
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+								<div class="col-sm-3 col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -316,11 +111,19 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default br-2-r" type="button">Search</button>
+								<div class="col-sm-6 col-md-6">
+									<div class="row">
+										<div class="col-sm-8 col-md-9 search">
+											<input type="text" class="form-control" placeholder="Search by text....">
+											<button class="btn btn-default br-2-r" type="button">Search</button>
+										</div>
+										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-sm-3 col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -328,15 +131,15 @@
 									</div>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fbtitle" class="control-label">Search by title</label>
 										<input type="text" class="form-control" id="fbtitle" ng-model="title">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-4 col-md-4">
 										<label for="fblocation" class="control-label">Search by Roles</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="role">
 									</div>
@@ -354,12 +157,11 @@
 											<md-card-content>
 												<h2 class="md-title">{{ schedule.title }}</h2>
 												<p>{{ schedule.status }}</p>
-												<p>{{ schedule.starttime }} - {{ schedule.endtime }}</p>
 												<p>{{ schedule.expirationdate }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.schedule.view-schedule">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.schedule.view-schedule">Edit</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.schedule.view-schedule-groups">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.schedule.edit-schedule-groups">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
 											</div>
 										</md-card>										
