Changed base url

--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -52,7 +52,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">>{{dashboardData.door}}</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
 									<span class="text-lg">Doors</span>
 								</div>
 							</div>
